      list in v3 files now always has 128 entries, several parameters
      where incorrectly saved due to an operator precedence mistake
    - DeleteSample now removes all references to the deleted sample
    - AddDimension now copies all parameters from existing dimension
      regions and also makes sure that the samplechannel dimension is
      placed first in the list of dimensions.

  * src/RIFF.cpp, src/RIFF.h:
    - added File::SetByteOrder method
    - Windows fix: saving a new file didn't work

  * src/gigdump.cpp:
    - added some missing dimension strings

Version 3.1.1 (24 Mar 2007)

  * packaging changes:
    - ported to Windows using native Windows functions for file IO
      (provided Dev-C++ + mingw project file)
    - only export relevant files to Doxygen API documentation

  * src/gig.cpp, src/gig.h:
    - custom velocity splits now works for gig v3 files too
    - added support for custom splits points for other dimensions than
      velocity (gig v3 feature)
    - added "smart midi" and "round robin keyboard" dimensions
    - added new method File::DeleteGroupOnly() which only deletes the given
      group but moves all its members to another group, the other method,
      that is File::DeleteGroup() now removes not just the group, but also
      all the samples that belong to that group
    - fixed crash which occured on interfering File::DeleteSample() and
      File::GetNextSample() calls (due to iterator invalidation)
    - fixed group names which were not saved
    - fixed group destructor which did not remove the RIFF chunk associated
      with the group
    - added Instrument::MoveRegion method
    - fixed constructor for Region, which did not initialize correctly
      when used from Instrument::AddRegion
    - when saving, override the gig::Regions sample reference simply by
      the region's first dimension region's sample (avoids an exception
      when trying to save a new instrument)